merge from release/3.0